--- a/marioTracker/static/marioTracker/statOrMap.css
+++ b/marioTracker/static/marioTracker/statOrMap.css
@@ -84,20 +84,39 @@ h3 {
     justify-content: space-around;
 }
 
-#playerSelectForm {
-    width: 80%;
-    height: 30%;
-    display: none;
+
+.selectPlayer{
+    width: 100%;
+    height: 25%;
+}
+
+.select2-container {
+    display: flex;
+    flex-direction: column;
+}
+
+span .select2-selection--multiple, select {
+    width: 100%;
+}
+
+span .selection { 
+    width: 100%;
+}
+
+#selectPlayerForm {
+    width: 100%;
+    height: 80%;
+    outline: black dotted 1px;
+    display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-span .select2 {
-    width: 50px;
-}
-
-.selection {
-    width: 100%;
+#ExistButton {
+    padding: 1px 28px;
+    height: 36px;
+    width: 104px;
+    text-align: center;
 }
 
 #statBackground{
