--- a/marioTracker/static/marioTracker/statOrMap.css
+++ b/marioTracker/static/marioTracker/statOrMap.css
@@ -64,7 +64,7 @@ h3 {
     font-size: 1em;
 }
 
-.choice:hover {
+.choice:hover{
     transform: scale(1.1);
     background-color:#000a21;
     color: aliceblue;
@@ -84,7 +84,6 @@ h3 {
     justify-content: space-around;
 }
 
-
 .selectPlayer{
     width: 100%;
     height: 25%;
@@ -93,13 +92,10 @@ h3 {
 .select2-container {
     display: flex;
     flex-direction: column;
+    min-width: 400px;
 }
 
-span .select2-selection--multiple, select {
-    width: 100%;
-}
-
-span .selection { 
+span {
     width: 100%;
 }
 
@@ -113,11 +109,34 @@ span .selection {
 }
 
 #ExistButton {
-    padding: 1px 28px;
-    height: 36px;
-    width: 104px;
-    text-align: center;
+    padding: 8px 28px;
+    border-radius: 5px;
+    font-size: 1em;
+    background-color: #000a21;
+    outline: whitesmoke 1px solid;
+    color: whitesmoke;
 }
+
+#ExistButton:hover {
+    transform: scale(1.05);
+}
+
+.new-player-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.playerCreateForm {
+    flex-direction: column;
+}
+
+form p {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+/* ----------------*/
 
 #statBackground{
     position: relative;
