--- a/marioTracker/static/marioTracker/statOrMap.css
+++ b/marioTracker/static/marioTracker/statOrMap.css
@@ -87,6 +87,9 @@ h3 {
 .selectPlayer{
     width: 100%;
     height: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .select2-container {
@@ -102,38 +105,64 @@ span {
 #selectPlayerForm {
     width: 100%;
     height: 80%;
-    outline: black dotted 1px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
 
-#ExistButton {
-    padding: 8px 28px;
+.ExistButton {
+    padding: 8px 13px;
     border-radius: 5px;
     font-size: 1em;
     background-color: #000a21;
     outline: whitesmoke 1px solid;
     color: whitesmoke;
+    max-width: 80px;
 }
 
-#ExistButton:hover {
+.ExistButton:hover {
     transform: scale(1.05);
 }
+
+#orDivider {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.line {
+    outline: black 1px solid;
+    height: 1px;
+    width: 33%;
+    background-color: black;
+}
+
 
 .new-player-section {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    align-items: center;
 }
 
-.playerCreateForm {
+#playerCreateForm {
     flex-direction: column;
+    width: 80%;
+    align-items: center;
+}
+
+p input {
+    width: 100%;
+    outline: transparent 1px solid;
 }
 
 form p {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    width: 80%;
 }
 
 /* ----------------*/
@@ -195,6 +224,26 @@ form p {
     border-radius: 5px;
     color: #000a21;
 }
+
+#playerReturn {
+    background-color: transparent;
+    color: rgba(255, 255, 255, 0.74);
+    border: rgb(240, 248, 255) 2px solid;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 10px 10px;
+    padding: 2px 9px;
+    font-size: 1.5em;
+    transition: border-top 0.1s ease-in, border-right 0.1s 0.1s ease-in, color 1.3s ease-out, border-bottom 0.1s 0.2s ease-in, border-left 0.1s 0.3s ease-in;
+}
+
+#playerReturn:hover {
+    border-color: #000a21;
+    color: #000a21;
+}
+
 
 /* Adjust the margins and other styles as needed */
 @keyframes statSpaceAnimation {
