--- a/marioTracker/static/marioTracker/mapGen.css
+++ b/marioTracker/static/marioTracker/mapGen.css
@@ -1,6 +1,6 @@
 html, body {
     box-sizing: border-box;
-    background-color: rgb(5, 5, 5);
+    background-color: #000a21;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -56,6 +56,7 @@ form {
     height: 100%;
     width: 90%;
     margin: 0 5%;
+    border-radius: 12px;
 }
 
 .next, .skip, #finish {
