--- a/marioTracker/templates/marioTracker/statsOrMap.html
+++ b/marioTracker/templates/marioTracker/statsOrMap.html
@@ -83,7 +83,9 @@
             </button>
         </div>
     </div>
-
+    <script>
+        var statsOrMapUrl = '{% url "marioTracker:statsOrMap" %}';
+    </script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="{% static 'marioTracker/js/button.js' %}"></script>
