--- a/marioTracker/static/marioTracker/index.css
+++ b/marioTracker/static/marioTracker/index.css
@@ -92,8 +92,6 @@
 	width: 250px; 
     height: 210px;
     top: -50px; 
-    left: 30px;
-	
 	border-radius: 50%;
     transform: rotate(-10deg);
     z-index: -1;
@@ -177,11 +175,9 @@ button {
 }
 
 .button {
-    width: 30%;
-    max-width: 150px;
-    height: 60%;
-    max-height: 200px;
-    border-radius: 12%;
+    width: 120px;
+    height: 50px;
+    border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(100, 100, 100, 0.712), 0 6px 15px rgba(17, 16, 16, 0.788);
     background-color: #AEB7B3;
     font-size: 20px;
@@ -199,12 +195,10 @@ button {
 
 .button a {
     position: relative;
-    width: 100%;
-    height: 100%;
     text-align: center;
-    padding: 5px;
+    padding: 12px 26px;
     text-decoration: none;
-    color: rgb(19, 19, 19);;
+    color: rgb(19, 19, 19);
 }
 
 .city {
@@ -354,7 +348,7 @@ button {
 }
 
 .trafficLight {
-    width: 40px;
+    width: 45px;
     height: 60%;
     position: relative;
     display: flex;
@@ -377,11 +371,12 @@ button {
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .light {
     border-radius: 50%;
-    height: 33%;
+    height: 30%;
     aspect-ratio: 1/1;
     background-color: green;
     animation: lightGreen 0.5s forwards;
@@ -519,4 +514,84 @@ button {
     66%{
         transform: rotate(-1deg) scale(0.95);
     }
+}
+
+@media screen and (max-width: 600px) {
+    .cloud {
+        width: 150px;
+        height: 75px;
+    }
+
+    .cloud:before {
+        width: 127px;
+        height: 96px;
+        right: 9px;
+        top: -13px;
+    }
+
+    .cloud:after {
+        width: 100px;
+        height: 100px;
+        left: 9px;
+        top: -19px;
+    }
+
+    .cloudText {
+        font-size: 18px;
+    }
+
+    .button a {
+        padding: 3px 11px;
+    }
+
+    .button {
+        width: 90px;
+        height: 35px;
+        box-shadow: 0 2px 4px 0 rgba(100, 100, 100, 0.712), 0 3px 7px rgba(17, 16, 16, 0.788);
+    }
+
+    .tallBuilding {
+        height: 70%;
+        width: 20%;
+    }
+
+    .buildings > .tallBuilding:nth-child(1) {
+        background-color: lightblue;
+        position: absolute;
+        left: 0;
+    }
+    
+    /* Select the second mediumBuilding directly inside .buildings */
+    .buildings > .mediumBuilding:nth-child(2) {
+        background-color: lightcoral;
+        position: absolute;
+        right: 0;
+        height: 50%;
+        width: 25%;
+    }
+    
+    /* Select the third tallBuilding directly inside .buildings */
+    .buildings > .tallBuilding:nth-child(3) {
+        background-color: lightgreen;
+        display: none;
+    }
+    
+    /* Select the fourth trafficLight directly inside .buildings */
+    .buildings > .trafficLight:nth-child(4) {
+        background-color: lightgoldenrodyellow;
+    }
+    
+    /* Select the fifth mediumBuilding directly inside .buildings */
+    .buildings > .mediumBuilding:nth-child(5) {
+        background-color: lightcoral;
+        display: none;
+    }
+    
+    /* Select the sixth tallBuilding directly inside .buildings */
+    .buildings > .tallBuilding:nth-child(6) {
+        background-color: lightgreen;
+        display: none;
+    }
+
+
 }
