--- a/marioTracker/static/marioTracker/statOrMap.css
+++ b/marioTracker/static/marioTracker/statOrMap.css
@@ -47,18 +47,19 @@ h3 {
     background-color: #000a21;
     border-radius: 5px;
     display: flex;
-    flex-grow: column;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: rgb(193, 193, 193);
-    font-size: 2.5em;
+    font-size: clamp(20px, 28px, 36px);
+    text-align: center;
 }
 
 .choice {
     position: relative;
     height: auto;
     padding: 15px 32px;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0 4px 4px 0 rgba(11, 11, 11, 0.712), 0 6px 7px rgba(10, 10, 10, 0.788);
     background-color: rgb(193, 193, 193);
     font-size: 1em;
@@ -178,6 +179,8 @@ form p {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    padding-bottom: 25px;
+    min-width: 300px;
 }
 
 #winRecordForm {
@@ -251,7 +254,7 @@ form p {
 
 #records th {
     text-align: left;
-    font-size: 2em;
+    font-size: 1.5em;
     color: #000a21;
     border-bottom: solid #000a21 1px;
 }
@@ -270,7 +273,6 @@ form p {
     vertical-align: top;
     font-size: 19px;
     max-height: 25px;
-    outline: solid black 1px;
     height: 2px;
     overflow: hidden;
 }
@@ -393,5 +395,21 @@ form p {
     100% {
         transform: translateX(-75vw);
         opacity: 0;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .card {
+        width: 85%;
+        height: 200px;
+    }
+
+    #cardsSpace {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card > h3 {
+        font-size: clamp(12px, 20px, 22px);
     }
 }
