--- a/marioTracker/static/marioTracker/statOrMap.css
+++ b/marioTracker/static/marioTracker/statOrMap.css
@@ -187,13 +187,16 @@ form p {
     width: 100%;
     flex-direction: column;
     align-items: center;
-    height: 20%;
+    height: 25%;
+    min-height: 120px;
+    max-height: 140px;
 }
 
 #formRow {
     width: 100%;
     flex-direction: row;
     justify-content: space-around;
+    max-height: calc(100% - 40px);
 }
 
 #winRecordForm p {
@@ -249,7 +252,7 @@ form p {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 80%;
+    max-height: 70%;
 }
 
 #records th {
@@ -274,14 +277,12 @@ form p {
     font-size: 19px;
     max-height: 25px;
     height: 2px;
-    overflow: hidden;
 }
 
 #records table {
     width: 85%;
     border: transparent;
     overflow-y: hidden;
-    table-layout: fixed;
 }
 
 #records table tbody {
@@ -411,5 +412,17 @@ form p {
 
     .card > h3 {
         font-size: clamp(12px, 20px, 22px);
+    }
+
+    #records td {
+        font-size: clamp(10px, 1.1em,  16px);
+    }
+
+    p input{
+        height: 17px;
+    }
+
+    p select {
+        height: 20px;
     }
 }
