Started working on index page

--- a/marioTracker/static/marioTracker/index.css
+++ b/marioTracker/static/marioTracker/index.css
@@ -423,6 +423,15 @@ button {
     }
 }
 
+@keyframes kartLeaving {
+    0% {
+        transform: translateX(0)
+    }
+    100%{
+        transform: translateX(50vw);
+    }
+}
+
 @keyframes exhaust {
     0% {
         opacity: 0;
