--- a/marioTracker/templates/marioTracker/base.html
+++ b/marioTracker/templates/marioTracker/base.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         {% block style %}
         {% endblock %}
     </head>
