--- a/marioTracker/templates/marioTracker/mapDisplay.html
+++ b/marioTracker/templates/marioTracker/mapDisplay.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% load static %}
         <link rel="stylesheet" href="{% static 'marioTracker/mapGen.css' %}">
-        <link rel="stylesheet" href="{}"
+        <link rel="stylesheet" href="{% static 'marioTracker/dropDown.css' %}">
     </head>
     <body>
         <div id="slideshow-container">
@@ -155,7 +155,6 @@
             <button id="finish" onmouseover="mouseOver(this, 'Finish')" onmouseout="mouseOver(this, 'Finish')">Finish</button>
         </div>
         <div id="winner-container">
-            <!--
             <h1 id="title">Race Participants:</h1>
             <form method="post" action="{% url 'marioTracker:displayView' %}">
                 {% csrf_token %}
@@ -177,8 +176,8 @@
                     </div>
                 </div>
             </form>
-        -->
-
+        
+        <!--
             <div class="dropdown">
                 <button class="dropdown-toggle">Select an Option</button>
                 <ul class="dropdown-menu">
@@ -187,10 +186,13 @@
                     <li><a href="#">Option 3</a></li>
                 </ul>
             </div>
+        -->
         </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/map.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/chgText.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/winner.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/form.js' %}"></script>
+        <script type="text/javascript" src="{% static 'marioTracker/js/dropDown.js' %}"></script>
     </body>
 </html>
