Got dropdown basics to work

--- a/marioTracker/static/marioTracker/dropDown.css
+++ b/marioTracker/static/marioTracker/dropDown.css
@@ -24,6 +24,15 @@
     z-index: 1;
 }
 
+.dropDownFlex {
+    display: flex;
+    flex-direction: column;
+}
+
+.dropDownHidden {
+    display: none;
+}
+
 .dropdown-menu li {
     list-style-type: none;
 }
