added scroll bar and search bar but search no worky

--- a/marioTracker/templates/marioTracker/statsOrMap.html
+++ b/marioTracker/templates/marioTracker/statsOrMap.html
@@ -54,8 +54,11 @@
                 <div class="dropdown">
                     <button class="dropdown-toggle">Players</button>
                     <ul class="dropdown-menu">
+                        <input type="text" id="searchBar" placeholder="Search By First or Last Name">
                         {% for player in players %}
-                            <li><a href="#" class="dropdown-item" data-value="{{ player.value }}">{{ player }}</a></li>
+                            <li data-firstName="{{ player.firstname }}" data-lastName="{{ player.lastname }}" class="dropdown-item">
+                                {{ player.firstname }} {{player.lastname}}
+                            </li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -87,11 +90,10 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script type="text/javascript" src="{% static 'marioTracker/js/searchBar.js' %}"></script>
     <script type="text/javascript" src="{% static 'marioTracker/js/button.js' %}"></script>
     <script type="text/javascript" src="{% static 'marioTracker/js/form.js' %}"></script>
     <script type="text/javascript" src="{% static 'marioTracker/js/stats.js' %}"></script>
     <script type="text/javascript" src="{% static 'marioTracker/js/dropDown.js' %}"></script>
-
-
 
 {% endblock %}
