--- a/marioTracker/static/marioTracker/dropDown.css
+++ b/marioTracker/static/marioTracker/dropDown.css
@@ -23,6 +23,8 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     padding-inline-start: 0;
+    max-height: 7em;
+    overflow-y: auto;
 }
 
 .dropDownFlex {
@@ -47,4 +49,22 @@
 
 .dropdown-menu li a:hover {
     background-color: #f1f1f1;
+}
+
+.dropdown-menu::-webkit-scrollbar {
+    width: 4px;
+}
+
+.dropdown-menu::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 20px;
+}
+
+.dropdown-menu::-webkit-scrollbar-thumb {
+    background-color: #889293;
+    border-radius: 10px;
+}
+
+.dropdown-menu::-webkit-scrollbar-thumb:hover {
+    background-color: #000a21;
 }
