--- a/marioTracker/static/marioTracker/dropDown.css
+++ b/marioTracker/static/marioTracker/dropDown.css
@@ -30,8 +30,10 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     padding-inline-start: 0;
-    max-height: 7em;
+    max-height: 10em;
     overflow-y: auto;
+    margin-block-start: 0;
+    top: 100%;
 }
 
 .dropDownFlex {
@@ -74,4 +76,8 @@
 
 .dropdown-menu::-webkit-scrollbar-thumb:hover {
     background-color: #000a21;
+}
+
+#submitSelectedPlayers{
+    display: none;
 }
