--- a/marioTracker/static/marioTracker/mapGen.css
+++ b/marioTracker/static/marioTracker/mapGen.css
@@ -73,6 +73,7 @@ form {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: transparent;
 }
 
 .next, #finish {
@@ -84,7 +85,7 @@ form {
     display: none;
 }
 
-.skip:hover, .next:hover {
+.skip:hover, .next:hover, #finish:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -107,6 +108,32 @@ form {
     padding: 8px 12px;
     opacity: 1;
 }
+
+.contestant{
+    font-weight:bolder;
+    overflow: hidden;
+    position: absolute;
+}
+
+#goldCrown {
+    width: 0;
+    height: 0;
+    opacity: 0;
+    z-index: 1;
+    transition: all 0.3 ease;
+    backface-visibility: hidden;
+    background-blend-mode: multiply;
+}
+
+.potentialWinner:hover #goldCrown{
+    width: 100%;
+    height: 110%;
+    opacity: 1;
+    top: -25px;
+    
+}
+
+
 
 @media screen and (max-width: 465px){
     .text, .numbertext {
