--- a/marioTracker/templates/marioTracker/mapDisplay.html
+++ b/marioTracker/templates/marioTracker/mapDisplay.html
@@ -152,18 +152,21 @@
             
             <a class="next" onmouseover="mouseOver(this, 'Next')" onmouseout="mouseOver(this, '&#10095;')" onclick="plusSlides(1)">&#10095;</a>
             <a class="skip" onmouseover="mouseOver(this, 'Skip')" onmouseout="mouseOut(this, 'X')" onclick="skipSlides(1)">X</a>
-            <button id="finish" onmouseover="mouseOver(this, 'Finish')" onmouseout="mouseOver(this, 'Finish')">Finish</button>
+            <a id="finish" onmouseover="mouseOver(this, 'Finish')" onmouseout="mouseOver(this, 'Finish')">Finish</a>
         </div>
         <div id="winner-container">
-            <h1 id="title">Race Participants:</h1>
+            <h1 id="title">Who won?</h1>
             <form method="post" action="{% url 'marioTracker:displayView' %}">
                 {% csrf_token %}
                 <div class="button-container">
                     <div class="quadrant">
                         {% for player in selectedPlayers|slice:"0:2" %}
+                            <div class="potentialWinner">
+                            <img src="{% static 'marioTracker/images/goldCrownC.png' %}" id="goldCrown">
                             <button type="submit" class="contestant" name="winner" value="{{ player.id }}">
                                 {{ player.firstname }}
                             </button>
+                            </div>
                         {% endfor %}
                     </div>
 
@@ -176,23 +179,11 @@
                     </div>
                 </div>
             </form>
-        
-        <!--
-            <div class="dropdown">
-                <button class="dropdown-toggle">Select an Option</button>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Option 1</a></li>
-                    <li><a href="#">Option 2</a></li>
-                    <li><a href="#">Option 3</a></li>
-                </ul>
-            </div>
-        -->
         </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/map.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/chgText.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/winner.js' %}"></script>
         <script type="text/javascript" src="{% static 'marioTracker/js/form.js' %}"></script>
-        <script type="text/javascript" src="{% static 'marioTracker/js/dropDown.js' %}"></script>
     </body>
 </html>
